# fib

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
include/rmgr/fib/: sse.h
tests/: CMakeLists.txt  main.cpp  sse_tests.h  x86_tests.cpp.in
